# informatics_2nd_sem

./: CM  Model.cpp  Model.hpp  Texture.hpp  all  man
Lab 1/: lr1kn
Lab 2/: main
Lab 3/: main
Lab 4/: main
main/: 1  hpp  model  model s  node  texture
programm/: CMakeLists.txt  Model.hpp  Node.hpp  main.cpp
